--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "__MSG_appName__",
+  "name": "Brave Wayback Machine Extension",
   "description": "__MSG_appDescription__",
   "version": "0.0.1",
   "manifest_version": 2,
@@ -12,9 +12,13 @@
     ],
     "persistent": true
   },
+  "web_accessible_resources": [
+    "img/404-image.svg"
+  ],
   "permissions": [
     "webRequest",
     "webRequestBlocking",
+    "tabs",
     "<all_urls>"
   ]
 }
