--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@types/chrome": "0.0.88",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.0.4",
+    "file-loader": "^4.2.0",
     "mini-css-extract-plugin": "^0.8.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "ts-loader": "^6.0.4",
     "typescript": "^3.6.2",
+    "url-loader": "^2.1.0",
     "webpack": "^4.39.3",
     "webpack-cli": "^3.3.8",
     "webpack-extension-reloader": "^1.1.0"
